--- a/src/app/hero-form/hero-form.component.html
+++ b/src/app/hero-form/hero-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Hero Form</h1>
-    <form>
+    <form #heroForm="ngForm">
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name">
@@ -9,7 +9,16 @@
 
         <div class="form-group">
             <label for="alterEgo">Alter Ego</label>
-            <input type="text" class="form-control" id="alterEgo">
+            <input type="text" class="form-control" id="alterEgo" name="alterEgo" [(ngModel)]="model.alterEgo">
+            TODO: remove this: {{model.alterEgo}}
+        </div>
+        
+        <div class="form-group">
+            <label for="power">Power</label>
+            <select id="power" required [(ngModel)]="model.power" name="power">
+                <option *ngFor="let power of powers" [value]="power">{{ power }}</option>
+            </select>
+            TODO: remove this: {{model.power}}
         </div>
 
         <button type="submit" class="btn btn-success">Submit</button>
