--- a/src/app/hero-form/hero-form.component.html
+++ b/src/app/hero-form/hero-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Hero Form</h1>
-    <form #heroForm="ngForm">
+    <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #name="ngModel">
