--- a/src/app/hero-form/hero-form.component.html
+++ b/src/app/hero-form/hero-form.component.html
@@ -21,7 +21,12 @@
             </select>
         </div>
 
-        <button type="submit" class="btn btn-success">Submit</button>
+        <button 
+            type="submit" 
+            class="btn btn-success"
+            [disabled]="!heroForm.form.valid">
+            Submit
+        </button>
 
     </form>
 </div>
